@@ -102,10 +102,10 @@ binary-arch: build-stamp install
 	find debian/tmp -name '*.xml' -delete
 	# Using exclusions here allows libx11-dev.install to use wildcards
 	# for headers, rather than listing every header other than this one.
-	dh_install --sourcedir=debian/tmp -plibx11-dev \
+	dh_install -plibx11-dev \
 	           --exclude=usr/include/X11/Xlib-xcb.h
-	dh_install --sourcedir=debian/tmp -Nlibx11-dev -s
-	dh_installchangelogs -s ChangeLog
+	dh_install -Nlibx11-dev -s
+	dh_installchangelogs -s
 	dh_installman -s
 	dh_lintian -s
 	dh_link -s
@@ -132,11 +132,11 @@ binary-indep: build-indep install
 	# Using exclusions here allows libx11-6.install to use wildcards for
 	# headers and manpages, rather than listing every header and manpage
 	# other than these.
-	dh_install --sourcedir=debian/tmp -plibx11-doc \
+	dh_install -plibx11-doc \
 	           --exclude=usr/include/X11/Xlib-xcb.h \
 	           --exclude=usr/share/man/man3/XGetXCBConnection.3 \
 	           --exclude=usr/share/man/man3/XSetEventQueueOwner.3
-	dh_install --sourcedir=debian/tmp -i -Nlibx11-doc
+	dh_install -i -Nlibx11-doc
 	dh_link -i
 	dh_installman -i
 	dh_lintian -i
